# open-tiku-api

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  open_tiku.sql
.github/workflows/: release.yml
src/: main.rs  route.rs
src/api/: callback.rs  chapter_knowledge.rs  config.rs  edit.rs  file.rs  github.rs  mod.rs  other_dict.rs  paper.rs  question.rs  question_cate.rs  task.rs  text.rs  textbook.rs  textbook_dict.rs  user.rs
src/app/: config.rs  cron.rs  mod.rs  route.rs  web.rs
src/config/: catalog.rs  guidance.rs  knowledge.rs  mod.rs  publisher.rs  question.rs  stage.rs  subject.rs  tag.rs  textbook.rs
src/constant/: meta.rs  mod.rs  textbook.rs
src/middleware/: user.rs
src/model/: chapter_knowledge.rs  mod.rs  other_dict.rs  paper.rs  paper_group.rs  paper_question.rs  question.rs  question_cate.rs  question_similar.rs  task.rs  test_rule.rs  textbook.rs  textbook_dict.rs  user_identity.rs  user_session.rs
src/service/: callback.rs  chapter_knowledge.rs  edit.rs  file.rs  github.rs  index.rs  mod.rs  paper.rs  question.rs  question_cate.rs  question_upload.rs  similar.rs  task.rs  textbook.rs  textbook_dict.rs  user.rs
src/task/: mod.rs  question.rs  session.rs
src/util/: email.rs  file.rs  local.rs  markdown.rs  markdown_parse.rs  md.rs  mod.rs  response.rs  snowflake.rs  string.rs  time.rs  upload.rs
