[package]
name = "open-tiku-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"
actix-multipart = "0.6"
futures-util = "0.3"
chrono = "0.4.42"
sanitize-filename = "0.6.0"
tokio = "1.48.0"
md5 = "0.8.0"